@@ -26,6 +26,7 @@ extern void caml_free_locale(void);
 /* readonly after startup */
 struct caml_params {
   const char_os* exe_name;
+  const char_os* proc_exe_name;
 
   /* for meta.c */
   const char* section_table;
@@ -63,7 +64,7 @@ extern void caml_parse_ocamlrunparam (void);
    If [pooling] is 0, [caml_stat_*] functions will not be backed by a pool. */
 extern int caml_startup_aux (int pooling);
 
-void caml_init_exe_name(const char_os* exe_name);
+void caml_init_exe_name(const char_os *, const char_os *);
 void caml_init_section_table(const char* section_table,
                              asize_t section_table_size);
 
