@@ -487,7 +487,13 @@ CAMLprim value caml_sys_executable_name(value unit)
   return caml_copy_string_of_os(caml_params->exe_name);
 }
 
-void caml_sys_init(const char_os * exe_name, char_os **argv)
+CAMLprim value caml_sys_interpreter_name(value unit)
+{
+  return caml_copy_string_of_os(caml_params->proc_exe_name);
+}
+
+void caml_sys_init(const char_os * proc_exe_name,
+                   const char_os * exe_name, char_os **argv)
 {
 #ifdef _WIN32
   /* Initialises the caml_win32_* globals on Windows with the version of
@@ -497,7 +503,7 @@ void caml_sys_init(const char_os * exe_name, char_os **argv)
   caml_setup_win32_terminal();
 #endif
 #endif
-  caml_init_exe_name(exe_name);
+  caml_init_exe_name((proc_exe_name ? proc_exe_name : exe_name), exe_name);
   main_argv = caml_alloc_array((void *)caml_copy_string_of_os,
                                (char const **) argv);
   caml_register_generational_global_root(&main_argv);
